[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainUi.gd" type="Script" id=1]

[node name="MainUi" type="Control"]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="."]
anchor_left = 0.761
anchor_top = 0.879
anchor_right = 0.787
anchor_bottom = 0.879
margin_top = -0.396851
margin_right = 67.0
margin_bottom = 19.6031
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellBox" type="TextEdit" parent="."]
margin_right = 135.0
margin_bottom = 20.0

[node name="SpellValidate" type="Button" parent="."]
margin_left = 136.397
margin_right = 166.397
margin_bottom = 20.0
text = "Ok"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn"]
[connection signal="pressed" from="SpellValidate" to="." method="_on_validate_spell"]
